tests/data/php/shouldfail/DisallowTabIndent.php
<?php
/**
 * @package testdata.shouldfail
 */
class DisallowTabIndent {
    /**
     * no dox
     */
    public function stuff() {
	// <== tabs be here!!
    }
}